--- a/openApiDocs/beta/Reports.yml
+++ b/openApiDocs/beta/Reports.yml
@@ -1183,6 +1183,37 @@ paths:
         default:
           $ref: '#/components/responses/error'
       x-ms-docs-operation-type: action
+  /auditLogs/signIns/microsoft.graph.dismiss:
+    post:
+      tags:
+        - auditLogs.signIn
+      summary: Invoke action dismiss
+      description: 'Mark an event in Microsoft Entra sign-in logs as dismissed. For details about investigating Identity Protection risks, see How to investigate risk.'
+      externalDocs:
+        description: Find more info here
+        url: https://learn.microsoft.com/graph/api/signin-dismiss?view=graph-rest-beta
+      operationId: auditLog.signIn_dismiss
+      requestBody:
+        description: Action parameters
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                requestIds:
+                  type: array
+                  items:
+                    type: string
+                    nullable: true
+              additionalProperties:
+                type: object
+        required: true
+      responses:
+        2XX:
+          description: Success
+        default:
+          $ref: '#/components/responses/error'
+      x-ms-docs-operation-type: action
   /auditLogs/signUps:
     get:
       tags:
@@ -21690,7 +21721,7 @@ components:
               $ref: '#/components/schemas/microsoft.graph.protocolType'
             authenticationRequirement:
               type: string
-              description: 'This holds the highest level of authentication needed through all the sign-in steps, for sign-in to succeed.  Supports $filter (eq, startsWith).'
+              description: 'The authentication requirement as explicitly requested by a resource provider. Does not account for previously satisfied claims. If primary authentication fails, the sign-in attempt is not evaluated by Conditional Access, so the resulting value is SingleFactorAuthentication.  Supports $filter (eq, startsWith).'
               nullable: true
             authenticationRequirementPolicies:
               type: array
@@ -22543,7 +22574,7 @@ components:
       properties:
         content:
           type: string
-          description: The http content that has the data
+          description: Report content; details vary by report type.
           format: base64url
           nullable: true
       additionalProperties:
@@ -24142,11 +24173,11 @@ components:
       properties:
         key:
           type: string
-          description: Key.
+          description: Contains the name of the field that a value is associated with.
           nullable: true
         value:
           type: string
-          description: Value.
+          description: Contains the corresponding value for the specified key.
           nullable: true
       additionalProperties:
         type: object
@@ -25919,11 +25950,11 @@ components:
       properties:
         displayName:
           type: string
-          description: 'The display name of the identity. For drive items, the display name might not always be available or up to date. For example, if a user changes their display name the API might show the new value in a future response, but the items associated with the user don''t show up as changed when using delta.'
+          description: The display name of the identity. This property is read-only.
           nullable: true
         id:
           type: string
-          description: 'Unique identifier for the identity or actor. For example, in the access reviews decisions API, this property might record the id of the principal, that is, the group, user, or application that''s subject to review.'
+          description: The identifier of the identity. This property is read-only.
           nullable: true
       additionalProperties:
         type: object
