--- a/openApiDocs/v1.0/Calendar.yml
+++ b/openApiDocs/v1.0/Calendar.yml
@@ -14472,7 +14472,7 @@ components:
         expirationDateTime:
           pattern: '^[0-9]{4,}-(0[1-9]|1[012])-(0[1-9]|[12][0-9]|3[01])T([01][0-9]|2[0-3]):[0-5][0-9]:[0-5][0-9]([.][0-9]{1,12})?(Z|[+-][0-9][0-9]:[0-9][0-9])$'
           type: string
-          description: The date and time in UTC that the upload session will expire. The complete file must be uploaded before this expiration time is reached.
+          description: The date and time in UTC that the upload session expires. The complete file must be uploaded before this expiration time is reached. Each fragment uploaded during the session extends the expiration time.
           format: date-time
           nullable: true
         nextExpectedRanges:
